Minimum Change in properties.html
add the fav icon tu the list

--- a/uptown/properties.html
+++ b/uptown/properties.html
@@ -77,8 +77,8 @@
         				</ul>
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
-        				<a href="properties-single.html" class="d-flex align-items-center justify-content-center btn-custom">
-        					<span class="ion-ios-link"></span>
+        				<a class="d-flex align-items-center justify-content-center btn-custom">
+        					<span class="icon-star-o"></span>
         				</a>
         			</div>
         		</div>
@@ -95,8 +95,8 @@
         				</ul>
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
-        				<a href="properties-single.html" class="d-flex align-items-center justify-content-center btn-custom">
-        					<span class="ion-ios-link"></span>
+        				<a class="d-flex align-items-center justify-content-center btn-custom">
+        					<span class="icon-star-o"></span>
         				</a>
         			</div>
         		</div>
@@ -113,8 +113,8 @@
         				</ul>
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
-        				<a href="properties-single.html" class="d-flex align-items-center justify-content-center btn-custom">
-        					<span class="ion-ios-link"></span>
+        				<a class="d-flex align-items-center justify-content-center btn-custom">
+        					<span class="icon-star-o"></span>
         				</a>
         			</div>
         		</div>
@@ -132,8 +132,8 @@
         				</ul>
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
-        				<a href="properties-single.html" class="d-flex align-items-center justify-content-center btn-custom">
-        					<span class="ion-ios-link"></span>
+        				<a class="d-flex align-items-center justify-content-center btn-custom">
+        					<span class="icon-star-o"></span>
         				</a>
         			</div>
         		</div>
@@ -150,8 +150,8 @@
         				</ul>
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
-        				<a href="properties-single.html" class="d-flex align-items-center justify-content-center btn-custom">
-        					<span class="ion-ios-link"></span>
+        				<a class="d-flex align-items-center justify-content-center btn-custom">
+        					<span class="icon-star-o"></span>
         				</a>
         			</div>
         		</div>
@@ -168,8 +168,8 @@
         				</ul>
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
-        				<a href="properties-single.html" class="d-flex align-items-center justify-content-center btn-custom">
-        					<span class="ion-ios-link"></span>
+        				<a class="d-flex align-items-center justify-content-center btn-custom">
+        					<span class="icon-star-o"></span>
         				</a>
         			</div>
         		</div>
@@ -187,8 +187,8 @@
         				</ul>
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
-        				<a href="properties-single.html" class="d-flex align-items-center justify-content-center btn-custom">
-        					<span class="ion-ios-link"></span>
+        				<a class="d-flex align-items-center justify-content-center btn-custom">
+        					<span class="icon-star-o"></span>
         				</a>
         			</div>
         		</div>
@@ -205,8 +205,8 @@
         				</ul>
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
-        				<a href="properties-single.html" class="d-flex align-items-center justify-content-center btn-custom">
-        					<span class="ion-ios-link"></span>
+        				<a class="d-flex align-items-center justify-content-center btn-custom">
+        					<span class="icon-star-o"></span>
         				</a>
         			</div>
         		</div>
@@ -223,8 +223,8 @@
         				</ul>
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
-        				<a href="properties-single.html" class="d-flex align-items-center justify-content-center btn-custom">
-        					<span class="ion-ios-link"></span>
+        				<a class="d-flex align-items-center justify-content-center btn-custom">
+        					<span class="icon-star-o"></span>
         				</a>
         			</div>
         		</div>
@@ -341,6 +341,6 @@
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
   <script src="js/google-map.js"></script>
   <script src="js/main.js"></script>
-    
+
   </body>
 </html>
