--- a/uptown/index.html
+++ b/uptown/index.html
@@ -43,7 +43,8 @@
 	          <li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
 	          <li class="nav-item"><a href="properties.html" class="nav-link">Properties</a></li>
 	          <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
-	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+            <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+            <li class="nav-item"><a href="login.html" class="nav-link">Mi Cuenta</a></li>
 	        </ul>
 	      </div>
 	    </div>
