--- a/uptown/login.html
+++ b/uptown/login.html
@@ -27,7 +27,7 @@
       
           <!-- Sign Up -->
           <div id="formFooter">
-            <a class="underlineHover" href="registrar.html">Registrarse</a>
+            <a class="underlineHover" href="signUp.html">Registrarse</a>
           </div>
       
         </div>
