--- a/uptown/signUp.html
+++ b/uptown/signUp.html
@@ -21,7 +21,7 @@
             <h3>Sign Up</h3>
             <input type="text" id="login" class="fadeIn second" name="login" placeholder="Email address or Username">
             <input type="text" id="password" class="fadeIn third" name="login" placeholder="Password">
-            <input type="submit" class="fadeIn fourth" value="Sign Up" href="login.html">
+            <input type="submit" class="fadeIn fourth" value="Sign Up">
             
           </form>
     
