--- a/uptown/index.html
+++ b/uptown/index.html
@@ -38,13 +38,11 @@
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
 	          <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-	          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-	          <li class="nav-item"><a href="agent.html" class="nav-link">Agent</a></li>
-	          <li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
-	          <li class="nav-item"><a href="properties.html" class="nav-link">Properties</a></li>
-	          <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
             <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-            <li class="nav-item"><a href="login.html" class="nav-link">Mi Cuenta</a></li>
+            <li class="nav-item"><a href="advertisements.html" class="nav-link">Poner anuncios</a></li>
+            <li class="nav-item"><a href="myFavourites.html" class="nav-link">Mis favoritos</a></li>
+            <li class="nav-item"><a href="myMessages.html" class="nav-link">Mis mensajes</a></li>
+            <li class="nav-item"><a href="login.html" class="nav-link">Acceso Usuario</a></li>
 	        </ul>
 	      </div>
 	    </div>
