--- a/uptown/signUp.html
+++ b/uptown/signUp.html
@@ -19,10 +19,10 @@
           <!-- Sign Up Form -->
           <form>
             <h3>Sign Up</h3>
-            <input type="text" id="login" class="fadeIn second" name="login" placeholder="Email address or Username">
-            <input type="text" id="password" class="fadeIn third" name="login" placeholder="Password">
+            <input type="text" id="emailAddress" class="fadeIn second" name="emailAddress" placeholder="Email Address">
+            <input type="text" id="username" class="fadeIn second" name="username" placeholder="Username">
+            <input type="text" id="password" class="fadeIn third" name="password" placeholder="Password">            
             <input type="submit" class="fadeIn fourth" value="Sign Up">
-            
           </form>
     
         </div>
