--- a/uptown/properties-single.html
+++ b/uptown/properties-single.html
@@ -84,6 +84,9 @@
 						<div class="bd-example bd-example-tabs">
 							<div class="d-flex justify-content-center">
 							  <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+								<li class="nav-item">
+									<a class="nav-link active" id="pills-description-tab" data-toggle="pill" href="#pills-description" role="tab" aria-controls="pills-description" aria-expanded="true">Características</a>
+								  </li>  
 							    <li class="nav-item">
 							      <a class="nav-link" id="pills-manufacturer-tab" data-toggle="pill" href="#pills-manufacturer" role="tab" aria-controls="pills-manufacturer" aria-expanded="true">Descripción</a>
 							    </li>
@@ -97,7 +100,7 @@
 						    <div class="tab-pane fade show active" id="pills-description" role="tabpanel" aria-labelledby="pills-description-tab">
 						    	<div class="row">
 						    		<div class="col-md-4">
-						    			<ul class="descripcion">
+						    			<ul class="Características">
 						    				<li class="check"><span class="ion-ios-checkmark"></span>metros cuadrados de la casa: 500m2</li>
 						    				<li class="check"><span class="ion-ios-checkmark"></span>Habitaciones: 6</li>
 						    				<li class="check"><span class="ion-ios-checkmark"></span>Baños: 4</li>
@@ -106,7 +109,7 @@
 						    			</ul>
 						    		</div>
 						    		<div class="col-md-4">
-						    			<ul class="descripcion">
+						    			<ul class="Características">
 						    				<li class="check"><span class="ion-ios-checkmark"></span>Metros cuadrados de la parcela: 600m2</li>
 						    				<li class="check"><span class="ion-ios-checkmark"></span>Año de construcción:: 2018</li>
 						    				<li class="check"><span class="ion-ios-checkmark"></span>piscinas climatizadas: 1</li>
@@ -115,7 +118,7 @@
 						    			</ul>
 						    		</div>
 						    		<div class="col-md-4">
-						    			<ul class="descripcion">
+						    			<ul class="Características">
 						    				<li class="check"><span class="ion-ios-checkmark"></span>Situada cerca de la sierra de Madrid</li>
 						    				<li class="check"><span class="ion-ios-checkmark"></span>Amplia parcela</li>
 						    				<li class="check"><span class="ion-ios-checkmark"></span>Jardin para niños</li>
