Updated html's footers so all look the same

--- a/uptown/index.html
+++ b/uptown/index.html
@@ -30,7 +30,7 @@
     
 	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Uptown</a>
+	      <a class="navbar-brand">AppName</a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -38,12 +38,11 @@
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
 	          <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-            <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-            <li class="nav-item"><a href="advertisements.html" class="nav-link">Poner anuncios</a></li>
+            <li class="nav-item"><a href="advertisements.html" class="nav-link">Poner anuncio</a></li>
             <li class="nav-item"><a href="myFavourites.html" class="nav-link">Mis favoritos</a></li>
             <li class="nav-item"><a href="myMessages.html" class="nav-link">Mis mensajes</a></li>
             <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
-            <li class="nav-item"><a href="login.html" class="nav-link">Acceso Usuario</a></li>
+            <li class="nav-item"><a href="login.html" class="nav-link">Login</a></li>
 	        </ul>
 	      </div>
 	    </div>
@@ -81,61 +80,12 @@
 			</div>
     </div>
 
-    <section class="ftco-section ftco-no-pb">
-      <div class="container">
-      	<div class="row justify-content-center">
-          <div class="col-md-12 heading-section text-center ftco-animate mb-5">
-          	<span class="subheading">Our Services</span>
-            <h2 class="mb-2">The smartest way to buy a home</h2>
-          </div>
-        </div>
-        <div class="row d-flex">
-          <div class="col-md-3 d-flex align-self-stretch ftco-animate">
-            <div class="media block-6 services d-block text-center">
-            	<div class="icon d-flex justify-content-center align-items-center"><span class="flaticon-piggy-bank"></span></div>
-              <div class="media-body py-md-4">
-                <h3>No Downpayment</h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-              </div>
-            </div>      
-          </div>
-          <div class="col-md-3 d-flex align-self-stretch ftco-animate">
-            <div class="media block-6 services d-block text-center">
-            	<div class="icon d-flex justify-content-center align-items-center"><span class="flaticon-wallet"></span></div>
-              <div class="media-body py-md-4">
-                <h3>All Cash Offer</h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-              </div>
-            </div>      
-          </div>
-          <div class="col-md-3 d-flex align-self-stretch ftco-animate">
-            <div class="media block-6 services d-block text-center">
-            	<div class="icon d-flex justify-content-center align-items-center"><span class="flaticon-file"></span></div>
-              <div class="media-body py-md-4">
-                <h3>Experts in Your Corner</h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-              </div>
-            </div>      
-          </div>
-          <div class="col-md-3 d-flex align-self-stretch ftco-animate">
-            <div class="media block-6 services d-block text-center">
-            	<div class="icon d-flex justify-content-center align-items-center"><span class="flaticon-locked"></span></div>
-              <div class="media-body py-md-4">
-                <h3>Lokced in Pricing</h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-              </div>
-            </div>      
-          </div>
-        </div>
-      </div>
-    </section>
-
     <section class="ftco-section goto-here">
     	<div class="container">
     		<div class="row justify-content-center">
           <div class="col-md-12 heading-section text-center ftco-animate mb-5">
-          	<span class="subheading">Historial</span>
-            <h2 class="mb-2">Últimas viviendas visitadas</h2>
+          	<span class="subheading">Recomendaciones</span>
+            <h2 class="mb-2">Viviendas seleccionadas para ti</h2>
           </div>
         </div>
         <div class="row">
