--- a/uptown/properties-modificar.html
+++ b/uptown/properties-modificar.html
@@ -75,8 +75,11 @@
         					<li><span class="flaticon-floor-plan"></span>1,878 sqft</li>
         				</ul>
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
-        				<span class="location">Oakland</span>
-        				<a class="d-flex align-items-center justify-content-center btn-custom-edit">
+						<span class="location">Oakland</span>
+						<a class="d-flex align-items-center justify-content-center btn-custom-edit">
+        					<span class="icon-trash"></span>
+						</a>
+        				<a class="d-flex align-items-center justify-content-center btn-custom-edit2">
         					<span class="icon-edit"></span>
         				</a>
         			</div>
@@ -95,9 +98,9 @@
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
         				<a class="d-flex align-items-center justify-content-center btn-custom-edit">
-        					<span class="icon-edit"></span>
+        					<span class="icon-trash"></span>
 						</a>
-						<a class="d-flex align-items-center justify-content-center btn-custom-delete">
+						<a class="d-flex align-items-center justify-content-center btn-custom-edit2">
         					<span class="icon-edit"></span>
 						</a>
 						
@@ -117,6 +120,9 @@
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
         				<a class="d-flex align-items-center justify-content-center btn-custom-edit">
+        					<span class="icon-trash"></span>
+						</a>
+        				<a class="d-flex align-items-center justify-content-center btn-custom-edit2">
         					<span class="icon-edit"></span>
         				</a>
         			</div>
@@ -136,6 +142,9 @@
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
         				<a class="d-flex align-items-center justify-content-center btn-custom-edit">
+        					<span class="icon-trash"></span>
+						</a>
+        				<a class="d-flex align-items-center justify-content-center btn-custom-edit2">
         					<span class="icon-edit"></span>
         				</a>
         			</div>
@@ -154,6 +163,9 @@
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
         				<a class="d-flex align-items-center justify-content-center btn-custom-edit">
+        					<span class="icon-trash"></span>
+						</a>
+        				<a class="d-flex align-items-center justify-content-center btn-custom-edit2">
         					<span class="icon-edit"></span>
         				</a>
         			</div>
@@ -172,6 +184,9 @@
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
         				<a class="d-flex align-items-center justify-content-center btn-custom-edit">
+        					<span class="icon-trash"></span>
+						</a>
+        				<a class="d-flex align-items-center justify-content-center btn-custom-edit2">
         					<span class="icon-edit"></span>
         				</a>
         			</div>
@@ -191,6 +206,9 @@
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
         				<a class="d-flex align-items-center justify-content-center btn-custom-edit">
+        					<span class="icon-trash"></span>
+						</a>
+        				<a class="d-flex align-items-center justify-content-center btn-custom-edit2">
         					<span class="icon-edit"></span>
         				</a>
         			</div>
@@ -209,6 +227,9 @@
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
         				<a class="d-flex align-items-center justify-content-center btn-custom-edit">
+        					<span class="icon-trash"></span>
+						</a>
+        				<a class="d-flex align-items-center justify-content-center btn-custom-edit2">
         					<span class="icon-edit"></span>
         				</a>
         			</div>
@@ -227,6 +248,9 @@
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
         				<a class="d-flex align-items-center justify-content-center btn-custom-edit">
+        					<span class="icon-trash"></span>
+						</a>
+        				<a class="d-flex align-items-center justify-content-center btn-custom-edit2">
         					<span class="icon-edit"></span>
         				</a>
         			</div>
