--- a/uptown/properties-single.html
+++ b/uptown/properties-single.html
@@ -37,13 +37,12 @@
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-	          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-	          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-	          <li class="nav-item"><a href="agent.html" class="nav-link">Agent</a></li>
-	          <li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
-	          <li class="nav-item"><a href="properties.html" class="nav-link">Properties</a></li>
-	          <li class="nav-item active"><a href="blog.html" class="nav-link">Blog</a></li>
-	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+	          <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
+            <li class="nav-item"><a href="advertisements.html" class="nav-link">Poner anuncio</a></li>
+            <li class="nav-item"><a href="myFavourites.html" class="nav-link">Mis favoritos</a></li>
+            <li class="nav-item"><a href="myMessages.html" class="nav-link">Mis anuncios</a></li>
+            <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
+            <li class="nav-item"><a href="login.html" class="nav-link">Login</a></li>
 	        </ul>
 	      </div>
 	    </div>
