--- a/uptown/blog.html
+++ b/uptown/blog.html
@@ -55,7 +55,7 @@
         <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center">
           <div class="col-md-9 ftco-animate pb-5 text-center">
           	<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Blog <i class="ion-ios-arrow-forward"></i></span></p>
-            <h1 class="mb-3 bread">Our Blog</h1>
+            <h1 class="mb-3 bread">Nuestro Blog</h1>
           </div>
         </div>
       </div>
@@ -67,22 +67,22 @@
           <div class="col-md-3 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
               <div class="text">
-                <h3 class="heading"><a href="#">Why Lead Generation is Key for Business Growth</a></h3>
+                <h3 class="heading"><a href="#">Pisos recien reformados en la zona de PAU4.</a></h3>
                 <div class="meta mb-3">
                   <div><a href="#">July. 24, 2019</a></div>
-                  <div><a href="#">Admin</a></div>
+                  <div><a href="#">Diana</a></div>
                   <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
                 </div>
                 <a href="blog-single.html" class="block-20 img" style="background-image: url('images/image_1.jpg');">
 	              </a>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                <p>Si estas buscando pisos baratos y de gran calidad no puedes perder esta oportunidad.</p>
               </div>
             </div>
           </div>
           <div class="col-md-3 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
               <div class="text">
-                <h3 class="heading"><a href="#">Why Lead Generation is Key for Business Growth</a></h3>
+                <h3 class="heading"><a href="#">Pisos totalmente amueblados listos para ser alquilados.</a></h3>
                 <div class="meta mb-3">
                   <div><a href="#">July. 24, 2019</a></div>
                   <div><a href="#">Admin</a></div>
@@ -90,14 +90,14 @@
                 </div>
                 <a href="blog-single.html" class="block-20 img" style="background-image: url('images/image_2.jpg');">
 	              </a>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                <p>Hemos recopilado unos cuantos pisos con urgencia para alquilar, ¡totalmente amueblados y a un precio increíble!</p>
               </div>
             </div>
           </div>
           <div class="col-md-3 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
               <div class="text">
-                <h3 class="heading"><a href="#">Why Lead Generation is Key for Business Growth</a></h3>
+                <h3 class="heading"><a href="#">Precios que no podrás ignorar, ¡compra ya!</a></h3>
                 <div class="meta mb-3">
                   <div><a href="#">July. 24, 2019</a></div>
                   <div><a href="#">Admin</a></div>
@@ -105,14 +105,14 @@
                 </div>
                 <a href="blog-single.html" class="block-20 img" style="background-image: url('images/image_3.jpg');">
 	              </a>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                <p>Casas, pisos, apartamentos... Todos con opción a compra a un precio inmejorable.</p>
               </div>
             </div>
           </div>
           <div class="col-md-3 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
               <div class="text">
-                <h3 class="heading"><a href="#">Why Lead Generation is Key for Business Growth</a></h3>
+                <h3 class="heading"><a href="#">Si quieres comprar una vivienda, observa esto primero.</a></h3>
                 <div class="meta mb-3">
                   <div><a href="#">July. 24, 2019</a></div>
                   <div><a href="#">Admin</a></div>
@@ -120,7 +120,7 @@
                 </div>
                 <a href="blog-single.html" class="block-20 img" style="background-image: url('images/image_4.jpg');">
 	              </a>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                <p>No hagas caso de lo que se comenta, observa como los precios de compra son cada vez más altos.</p>
               </div>
             </div>
           </div>
@@ -128,7 +128,7 @@
           <div class="col-md-3 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
               <div class="text">
-                <h3 class="heading"><a href="#">Why Lead Generation is Key for Business Growth</a></h3>
+                <h3 class="heading"><a href="#">Pisos recien reformados en la zona de PAU4.</a></h3>
                 <div class="meta mb-3">
                   <div><a href="#">July. 24, 2019</a></div>
                   <div><a href="#">Admin</a></div>
@@ -136,14 +136,14 @@
                 </div>
                 <a href="blog-single.html" class="block-20 img" style="background-image: url('images/image_5.jpg');">
 	              </a>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                <p>Si estas buscando pisos baratos y de gran calidad no puedes perder esta oportunidad.</p>
               </div>
             </div>
           </div>
           <div class="col-md-3 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
               <div class="text">
-                <h3 class="heading"><a href="#">Why Lead Generation is Key for Business Growth</a></h3>
+                <h3 class="heading"><a href="#">Pisos totalmente amueblados listos para ser alquilados.</a></h3>
                 <div class="meta mb-3">
                   <div><a href="#">July. 24, 2019</a></div>
                   <div><a href="#">Admin</a></div>
@@ -151,14 +151,14 @@
                 </div>
                 <a href="blog-single.html" class="block-20 img" style="background-image: url('images/image_6.jpg');">
 	              </a>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                <p>Hemos recopilado unos cuantos pisos con urgencia para alquilar, ¡totalmente amueblados y a un precio increíble!</p>
               </div>
             </div>
           </div>
           <div class="col-md-3 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
               <div class="text">
-                <h3 class="heading"><a href="#">Why Lead Generation is Key for Business Growth</a></h3>
+                <h3 class="heading"><a href="#">Precios que no podrás ignorar, ¡compra ya!</a></h3>
                 <div class="meta mb-3">
                   <div><a href="#">July. 24, 2019</a></div>
                   <div><a href="#">Admin</a></div>
@@ -166,14 +166,14 @@
                 </div>
                 <a href="blog-single.html" class="block-20 img" style="background-image: url('images/image_7.jpg');">
 	              </a>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                <p>Casas, pisos, apartamentos... Todos con opción a compra a un precio inmejorable.</p>
               </div>
             </div>
           </div>
           <div class="col-md-3 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
               <div class="text">
-                <h3 class="heading"><a href="#">Why Lead Generation is Key for Business Growth</a></h3>
+                <h3 class="heading"><a href="#">Si quieres comprar una vivienda, observa esto primero.</a></h3>
                 <div class="meta mb-3">
                   <div><a href="#">July. 24, 2019</a></div>
                   <div><a href="#">Admin</a></div>
@@ -181,7 +181,7 @@
                 </div>
                 <a href="blog-single.html" class="block-20 img" style="background-image: url('images/image_8.jpg');">
 	              </a>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                <p>No hagas caso de lo que se comenta, observa como los precios de compra son cada vez más altos.</p>
               </div>
             </div>
           </div>
