Some edits on property upload html

--- a/uptown/index.html
+++ b/uptown/index.html
@@ -53,7 +53,7 @@
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text justify-content-center align-items-center">
-          <div class="col-lg-8 col-md-6 ftco-animate d-flex align-items-center justify-content-center" id="needFix">
+          <div class="col-lg-8 col-md-6 ftco-animate d-flex align-items-center justify-content-center">
           	<div class="text text-center content-center" id = "containerPresentation">
 	            <h1 class="mb-4">Encuentra ya <br>tu próxima propiedad</h1>
 	            <p style="font-size: 18px;">Introduce la zona deseada y disfruta de nuestro catálogo de viviendas</p>
