--- a/uptown/property-upload.html
+++ b/uptown/property-upload.html
@@ -3,6 +3,7 @@
     <head>
         <title>property upload page</title>
         <link rel="stylesheet" href="css/login.css">
+        <link rel="stylesheet" href="css/propertyUpload.css">
         <!-- <link rel="stylesheet" href="css/style.css"> -->
     </head>
     <style>
@@ -10,24 +11,22 @@
             background-size: cover; 
         }
     </style>
-    <body class="" background="images/bg_1.jpg">
-        <div class="container">
-        <div class="row block-9 ">
-            <div class="col-md-8 mb-md-5 content-center" id="content">
+    <body class="myBody">
+      <div class="myContainer">
+            <div class="col-md-8 mb-md-5 d-flex align-middle justify-content-center" id="content">
                 <h2 class="text-center">Publicar anuncio <br></h2>
               <form action="#" class="bg-light p-5 contact-form">
-                <div class="form-group">
-                    <textarea name="property" id="" cols="30" rows="20" class="md-textarea form-control" placeholder="Caracteristicas"></textarea>
+                <div class="md-form">
+                    <textarea name="property" cols="30" rows="7" class="md-textarea form-control" placeholder="Caracteristicas"></textarea>
                 </div>
                 <div class="form-group">
                   <textarea name="description" id="" cols="30" rows="7" class="form-control" placeholder="Descripcion"></textarea>
                 </div>
                 <div class="form-group">
                   <input type="submit" value="Publicar anuncio" class="btn btn-primary py-3 px-5">
+                  <input type="submit" value="Subir imagenes" class="btn btn-primary py-3 px-5">
                 </div>
-              </form>
-            
+              </form>     
             </div>
-          </div>
           </div>
 </html>
