--- a/uptown/index.html
+++ b/uptown/index.html
@@ -38,7 +38,7 @@
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
 	          <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-            <li class="nav-item"><a href="advertisements.html" class="nav-link">Poner anuncio</a></li>
+            <li class="nav-item"><a href="property-upload.html" class="nav-link">Poner anuncio</a></li>
             <li class="nav-item"><a href="properties.html" class="nav-link">Mis favoritos</a></li>
             <li class="nav-item"><a href="myMessages.html" class="nav-link">Mis anuncios</a></li>
             <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
