--- a/uptown/blog-single.html
+++ b/uptown/blog-single.html
@@ -40,7 +40,7 @@
 	          <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
             <li class="nav-item"><a href="advertisements.html" class="nav-link">Poner anuncio</a></li>
             <li class="nav-item"><a href="properties.html" class="nav-link">Mis favoritos</a></li>
-            <li class="nav-item"><a href="myMessages.html" class="nav-link">Mis anuncios</a></li>
+            <li class="nav-item"><a href="properties-modificar.html" class="nav-link">Mis anuncios</a></li>
             <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
             <li class="nav-item"><a href="login.html" class="nav-link">Login</a></li>
 	        </ul>
