--- a/uptown/properties-modificar.html
+++ b/uptown/properties-modificar.html
@@ -76,12 +76,12 @@
         				</ul>
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
 						<span class="location">Oakland</span>
-						<a class="d-flex align-items-center justify-content-center btn-custom-edit">
+						<button class="d-flex align-items-center justify-content-center btn-custom-edit">
         					<span class="icon-trash"></span>
 						</a>
-        				<a class="d-flex align-items-center justify-content-center btn-custom-edit2">
+        				<button class="d-flex align-items-center justify-content-center btn-custom-edit2">
         					<span class="icon-edit"></span>
-        				</a>
+        				</button>
         			</div>
         		</div>
         	</div>
@@ -97,12 +97,12 @@
         				</ul>
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
-        				<a class="d-flex align-items-center justify-content-center btn-custom-edit">
+        				<button class="d-flex align-items-center justify-content-center btn-custom-edit">
         					<span class="icon-trash"></span>
-						</a>
-						<a class="d-flex align-items-center justify-content-center btn-custom-edit2">
+						</button>
+						<button class="d-flex align-items-center justify-content-center btn-custom-edit2">
         					<span class="icon-edit"></span>
-						</a>
+						</button>
 						
         			</div>
         		</div>
@@ -119,10 +119,10 @@
         				</ul>
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
-        				<a class="d-flex align-items-center justify-content-center btn-custom-edit">
+        				<button class="d-flex align-items-center justify-content-center btn-custom-edit">
         					<span class="icon-trash"></span>
-						</a>
-        				<a class="d-flex align-items-center justify-content-center btn-custom-edit2">
+						</button>
+        				<button class="d-flex align-items-center justify-content-center btn-custom-edit2">
         					<span class="icon-edit"></span>
         				</a>
         			</div>
@@ -141,12 +141,12 @@
         				</ul>
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
-        				<a class="d-flex align-items-center justify-content-center btn-custom-edit">
+        				<button class="d-flex align-items-center justify-content-center btn-custom-edit">
         					<span class="icon-trash"></span>
-						</a>
-        				<a class="d-flex align-items-center justify-content-center btn-custom-edit2">
+						</button>
+        				<button class="d-flex align-items-center justify-content-center btn-custom-edit2">
         					<span class="icon-edit"></span>
-        				</a>
+        				</button>
         			</div>
         		</div>
         	</div>
@@ -162,12 +162,12 @@
         				</ul>
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
-        				<a class="d-flex align-items-center justify-content-center btn-custom-edit">
+        				<button class="d-flex align-items-center justify-content-center btn-custom-edit">
         					<span class="icon-trash"></span>
-						</a>
-        				<a class="d-flex align-items-center justify-content-center btn-custom-edit2">
+						</button>
+        				<button class="d-flex align-items-center justify-content-center btn-custom-edit2">
         					<span class="icon-edit"></span>
-        				</a>
+        				</button>
         			</div>
         		</div>
         	</div>
@@ -183,10 +183,10 @@
         				</ul>
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
-        				<a class="d-flex align-items-center justify-content-center btn-custom-edit">
+        				<button class="d-flex align-items-center justify-content-center btn-custom-edit">
         					<span class="icon-trash"></span>
-						</a>
-        				<a class="d-flex align-items-center justify-content-center btn-custom-edit2">
+						</button>
+        				<button class="d-flex align-items-center justify-content-center btn-custom-edit2">
         					<span class="icon-edit"></span>
         				</a>
         			</div>
@@ -205,12 +205,12 @@
         				</ul>
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
-        				<a class="d-flex align-items-center justify-content-center btn-custom-edit">
+        				<button class="d-flex align-items-center justify-content-center btn-custom-edit">
         					<span class="icon-trash"></span>
-						</a>
-        				<a class="d-flex align-items-center justify-content-center btn-custom-edit2">
+						</button>
+        				<button class="d-flex align-items-center justify-content-center btn-custom-edit2">
         					<span class="icon-edit"></span>
-        				</a>
+        				</button>
         			</div>
         		</div>
         	</div>
@@ -226,12 +226,12 @@
         				</ul>
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
-        				<a class="d-flex align-items-center justify-content-center btn-custom-edit">
+        				<button class="d-flex align-items-center justify-content-center btn-custom-edit">
         					<span class="icon-trash"></span>
 						</a>
-        				<a class="d-flex align-items-center justify-content-center btn-custom-edit2">
+        				<button class="d-flex align-items-center justify-content-center btn-custom-edit2">
         					<span class="icon-edit"></span>
-        				</a>
+        				</button>
         			</div>
         		</div>
         	</div>
@@ -247,12 +247,12 @@
         				</ul>
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
-        				<a class="d-flex align-items-center justify-content-center btn-custom-edit">
+        				<button class="d-flex align-items-center justify-content-center btn-custom-edit">
         					<span class="icon-trash"></span>
-						</a>
-        				<a class="d-flex align-items-center justify-content-center btn-custom-edit2">
+						</button>
+        				<button class="d-flex align-items-center justify-content-center btn-custom-edit2">
         					<span class="icon-edit"></span>
-        				</a>
+        				</button>
         			</div>
         		</div>
         	</div>
