Small html changes

--- a/uptown/properties.html
+++ b/uptown/properties.html
@@ -37,9 +37,9 @@
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-	          <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
+	          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
             <li class="nav-item"><a href="property-upload.html" class="nav-link">Poner anuncio</a></li>
-            <li class="nav-item"><a href="properties.html" class="nav-link">Mis favoritos</a></li>
+            <li class="nav-item active"><a href="properties.html" class="nav-link">Mis favoritos</a></li>
             <li class="nav-item"><a href="properties-modificar.html" class="nav-link">Mis anuncios</a></li>
             <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
             <li class="nav-item"><a href="login.html" class="nav-link">Login</a></li>
@@ -54,8 +54,8 @@
       <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center">
           <div class="col-md-9 ftco-animate pb-5 text-center">
-          	<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Properties <i class="ion-ios-arrow-forward"></i></span></p>
-            <h1 class="mb-3 bread">Choose <br>Your Desired Home</h1>
+          	<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Favoritos <i class="ion-ios-arrow-forward"></i></span></p>
+            <h1 class="mb-3 bread">Tus <br>anuncios favoritos</h1>
           </div>
         </div>
       </div>
