--- a/uptown/property-upload.html
+++ b/uptown/property-upload.html
@@ -19,6 +19,11 @@
                 <br>
                 <h3 class="botonDesp1">Tipo de anuncio:</h3>
                 <select class="botonDesp" name="cars"> 
+                  <option value="venta">Venta</option>
+                  <option value="alquiler">Alquiler</option>
+                </select>
+                <h3 class="botonDesp1">Tipo de vivienda:</h3>
+                <select class="botonDesp" name="cars"> 
                   <option value="piso">Piso</option>
                   <option value="casa">Casa</option>
                   <option value="local">Local</option>
@@ -118,6 +123,13 @@
                     <option value="Sierra de Madrid">
                   </datalist>
                 </form>
+                <form action="/action_page.php">
+                  <h3 class="botonDesp2">Introduzca aquí la dirección:</h3><br><br><br>
+                  <input name="Precio" type="text">
+                  <br>
+                </form>
+              <form action="#" class="bg-light p-5 contact-form">
+                
                 
                 <form action="/action_page.php">
                   <h3 class="botonDesp2">Introduzca aquí el precio del anuncio:</h3><br><br><br>
