--- a/uptown/property-upload.html
+++ b/uptown/property-upload.html
@@ -148,6 +148,7 @@
                   <input type="submit" value="Subir imagenes" class="btn btn-primary py-3 px-5">
                   <input type="submit" value="Publicar anuncio" class="btn btn-primary py-3 px-5">
                 </div>
+                <button type="submit" class="btn btn-primary">Volver a Mis anuncios</button>
               </form>     
             </div>
           </div>
