--- a/uptown/properties-modificar.html
+++ b/uptown/properties-modificar.html
@@ -79,7 +79,7 @@
 						<button class="d-flex align-items-center justify-content-center btn-custom-edit">
         					<span class="icon-trash"></span>
 						</a>
-        				<button class="d-flex align-items-center justify-content-center btn-custom-edit2">
+        				<button class="d-flex align-items-center justify-content-center btn-custom-edit2"><a href="http://127.0.0.1:5500/uptown/property-upload.html">
         					<span class="icon-edit"></span>
         				</button>
         			</div>
@@ -100,9 +100,9 @@
         				<button class="d-flex align-items-center justify-content-center btn-custom-edit">
         					<span class="icon-trash"></span>
 						</button>
-						<button class="d-flex align-items-center justify-content-center btn-custom-edit2">
+						<button class="d-flex align-items-center justify-content-center btn-custom-edit2"><a href="http://127.0.0.1:5500/uptown/property-upload.html">
         					<span class="icon-edit"></span>
-						</button>
+        				</button>
 						
         			</div>
         		</div>
@@ -122,8 +122,9 @@
         				<button class="d-flex align-items-center justify-content-center btn-custom-edit">
         					<span class="icon-trash"></span>
 						</button>
-        				<button class="d-flex align-items-center justify-content-center btn-custom-edit2">
+        				<button class="d-flex align-items-center justify-content-center btn-custom-edit2"><a href="http://127.0.0.1:5500/uptown/property-upload.html">
         					<span class="icon-edit"></span>
+        				</button>
         				</a>
         			</div>
         		</div>
@@ -144,7 +145,7 @@
         				<button class="d-flex align-items-center justify-content-center btn-custom-edit">
         					<span class="icon-trash"></span>
 						</button>
-        				<button class="d-flex align-items-center justify-content-center btn-custom-edit2">
+        				<button class="d-flex align-items-center justify-content-center btn-custom-edit2"><a href="http://127.0.0.1:5500/uptown/property-upload.html">
         					<span class="icon-edit"></span>
         				</button>
         			</div>
@@ -165,7 +166,7 @@
         				<button class="d-flex align-items-center justify-content-center btn-custom-edit">
         					<span class="icon-trash"></span>
 						</button>
-        				<button class="d-flex align-items-center justify-content-center btn-custom-edit2">
+        				<button class="d-flex align-items-center justify-content-center btn-custom-edit2"><a href="http://127.0.0.1:5500/uptown/property-upload.html">
         					<span class="icon-edit"></span>
         				</button>
         			</div>
@@ -186,9 +187,9 @@
         				<button class="d-flex align-items-center justify-content-center btn-custom-edit">
         					<span class="icon-trash"></span>
 						</button>
-        				<button class="d-flex align-items-center justify-content-center btn-custom-edit2">
+        				<button class="d-flex align-items-center justify-content-center btn-custom-edit2"><a href="http://127.0.0.1:5500/uptown/property-upload.html">
         					<span class="icon-edit"></span>
-        				</a>
+        				</button>
         			</div>
         		</div>
         	</div>
@@ -208,7 +209,7 @@
         				<button class="d-flex align-items-center justify-content-center btn-custom-edit">
         					<span class="icon-trash"></span>
 						</button>
-        				<button class="d-flex align-items-center justify-content-center btn-custom-edit2">
+        				<button class="d-flex align-items-center justify-content-center btn-custom-edit2"><a href="http://127.0.0.1:5500/uptown/property-upload.html">
         					<span class="icon-edit"></span>
         				</button>
         			</div>
@@ -229,7 +230,7 @@
         				<button class="d-flex align-items-center justify-content-center btn-custom-edit">
         					<span class="icon-trash"></span>
 						</a>
-        				<button class="d-flex align-items-center justify-content-center btn-custom-edit2">
+        				<button class="d-flex align-items-center justify-content-center btn-custom-edit2"><a href="http://127.0.0.1:5500/uptown/property-upload.html">
         					<span class="icon-edit"></span>
         				</button>
         			</div>
@@ -250,7 +251,7 @@
         				<button class="d-flex align-items-center justify-content-center btn-custom-edit">
         					<span class="icon-trash"></span>
 						</button>
-        				<button class="d-flex align-items-center justify-content-center btn-custom-edit2">
+        				<button class="d-flex align-items-center justify-content-center btn-custom-edit2"><a href="http://127.0.0.1:5500/uptown/property-upload.html">
         					<span class="icon-edit"></span>
         				</button>
         			</div>
