--- a/uptown/properties.html
+++ b/uptown/properties.html
@@ -76,9 +76,9 @@
         				</ul>
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
-        				<a class="d-flex align-items-center justify-content-center btn-custom">
+        				<button class="d-flex align-items-center justify-content-center btn-custom">
         					<span class="icon-star-o"></span>
-        				</a>
+        				</button>
         			</div>
         		</div>
         	</div>
@@ -94,9 +94,9 @@
         				</ul>
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
-        				<a class="d-flex align-items-center justify-content-center btn-custom">
+        				<button class="d-flex align-items-center justify-content-center btn-custom">
         					<span class="icon-star-o"></span>
-        				</a>
+        				</button>
         			</div>
         		</div>
         	</div>
@@ -112,9 +112,9 @@
         				</ul>
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
-        				<a class="d-flex align-items-center justify-content-center btn-custom">
+        				<button class="d-flex align-items-center justify-content-center btn-custom">
         					<span class="icon-star-o"></span>
-        				</a>
+        				</button>
         			</div>
         		</div>
         	</div>
@@ -131,9 +131,9 @@
         				</ul>
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
-        				<a class="d-flex align-items-center justify-content-center btn-custom">
+        				<button class="d-flex align-items-center justify-content-center btn-custom">
         					<span class="icon-star-o"></span>
-        				</a>
+        				</button>
         			</div>
         		</div>
         	</div>
@@ -149,9 +149,9 @@
         				</ul>
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
-        				<a class="d-flex align-items-center justify-content-center btn-custom">
+        				<button class="d-flex align-items-center justify-content-center btn-custom">
         					<span class="icon-star-o"></span>
-        				</a>
+        				</button>
         			</div>
         		</div>
         	</div>
@@ -167,9 +167,9 @@
         				</ul>
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
-        				<a class="d-flex align-items-center justify-content-center btn-custom">
+        				<button class="d-flex align-items-center justify-content-center btn-custom">
         					<span class="icon-star-o"></span>
-        				</a>
+        				</button>
         			</div>
         		</div>
         	</div>
@@ -186,9 +186,9 @@
         				</ul>
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
-        				<a class="d-flex align-items-center justify-content-center btn-custom">
+        				<button class="d-flex align-items-center justify-content-center btn-custom">
         					<span class="icon-star-o"></span>
-        				</a>
+        				</button>
         			</div>
         		</div>
         	</div>
@@ -204,9 +204,9 @@
         				</ul>
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
-        				<a class="d-flex align-items-center justify-content-center btn-custom">
+        				<button class="d-flex align-items-center justify-content-center btn-custom">
         					<span class="icon-star-o"></span>
-        				</a>
+        				</button>
         			</div>
         		</div>
         	</div>
@@ -222,9 +222,9 @@
         				</ul>
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
-        				<a class="d-flex align-items-center justify-content-center btn-custom">
+        				<button class="d-flex align-items-center justify-content-center btn-custom">
         					<span class="icon-star-o"></span>
-        				</a>
+        				</button>
         			</div>
         		</div>
         	</div>
