--- a/uptown/property-upload.html
+++ b/uptown/property-upload.html
@@ -4,6 +4,8 @@
         <title>property upload page</title>
         <link rel="stylesheet" href="css/login.css">
         <link rel="stylesheet" href="css/propertyUpload.css">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width">
         <!-- <link rel="stylesheet" href="css/style.css"> -->
     </head>
     <style>
@@ -148,7 +150,8 @@
                   <input type="submit" value="Subir imagenes" class="btn btn-primary py-3 px-5">
                   <input type="submit" value="Publicar anuncio" class="btn btn-primary py-3 px-5">
                 </div>
-                <button type="submit" class="btn btn-primary">Volver a Mis anuncios</button>
+                <a href="http://127.0.0.1:5500/uptown/properties-modificar.html"><input type="button" value="Volver a Mis anuncios"></a>
+                
               </form>     
             </div>
           </div>
