--- a/uptown/login.html
+++ b/uptown/login.html
@@ -30,6 +30,7 @@
           <div id="formFooter">
             <a class="underlineHover" href="signUp.html">Registrarse</a>
           </div>
+          <a href="http://127.0.0.1:5500/uptown/index.html"><input type="button" value="Home"></a>
       
         </div>
       </div>
