--- a/uptown/signUp.html
+++ b/uptown/signUp.html
@@ -24,6 +24,8 @@
             <input type="text" id="password" class="fadeIn third" name="password" placeholder="Password">            
             <input type="submit" class="fadeIn fourth" value="Sign Up">
           </form>
+          <a href="http://127.0.0.1:5500/uptown/index.html"><input type="button" value="Home"></a>
+          
     
         </div>
       </div>
