--- a/uptown/properties-single-user.html
+++ b/uptown/properties-single-user.html
@@ -87,7 +87,7 @@
 									<a class="nav-link active" id="pills-description-tab" data-toggle="pill" href="#pills-description" role="tab" aria-controls="pills-description" aria-expanded="true">Características</a>
 								  </li>  
 							    <li class="nav-item">
-							      <a class="nav-link" id="pills-manufacturer-tab" data-toggle="pill" href="#pills-manufacturer" role="tab" aria-controls="pills-manufacturer" aria-expanded="true">Descripción</a>
+							      <a class="nav-link" id="pills-manufacturer-tab" data-toggle="pill" href="#pills-manufacturer" role="tab" aria-controls="pills-manufacturer" aria-expanded="true">Descripción y localización</a>
 							    </li>
 							    <li class="nav-item">
 							      <a class="nav-link" id="pills-review-tab" data-toggle="pill" href="#pills-review" role="tab" aria-controls="pills-review" aria-expanded="true">Opiniones</a>
@@ -132,6 +132,19 @@
 						      <p> Una casa acogedora en las afueras de madrid, situada cerca de la sierra con un amplio jardin y habitaciones espaciosas. También tiene una piscina climatizada y un garage. Tendrás una amplia zona de ocio para realizar todo tipo de eventos, ¿vas a desaprovechar esta oportunidad? 
 								  La casa tiene 1200 metros cuadrados, 6 habitaciones, 2 baños amplios, 1 jacuzzi, 1 piscina climatizadad y 1 garaje.</p>
 								<p>La casa tiene 1200 metros cuadrados, 6 habitaciones, 2 baños amplios, 1 jacuzzi, 1 piscina climatizadad y 1 garaje.</p>
+								<div id="wrapper-9cd199b9cc5410cd3b1ad21cab2e54d3">
+									<div id="map-9cd199b9cc5410cd3b1ad21cab2e54d3"></div><script>(function () {
+									var setting = {"height":531,"width":803,"zoom":13,"queryString":"San Lorenzo de El Escorial, España","place_id":"ChIJg8YyLS8KQQ0RvM-WF9d8jqc","satellite":false,"centerCoord":[40.591323456735495,-4.143906849999996],"cid":"0xa78e7cd71796cfbc","lang":"es","cityUrl":"/spain/san-lorenzo-de-el-escorial-31465","id":"map-9cd199b9cc5410cd3b1ad21cab2e54d3","embed_id":"158891"};
+									var d = document;
+									var s = d.createElement('script');
+									s.src = 'https://1map.com/js/script-for-user.js?embed_id=158891';
+									s.async = true;
+									s.onload = function (e) {
+									  window.OneMap.initMap(setting)
+									};
+									var to = d.getElementsByTagName('script')[0];
+									to.parentNode.insertBefore(s, to);
+								  })();</script><a href="https://1map.com/es/map-embed?embed_id=158891">1 Map</a></div>
 						    </div>
 
 						    <div class="tab-pane fade" id="pills-review" role="tabpanel" aria-labelledby="pills-review-tab">
