--- a/uptown/index.html
+++ b/uptown/index.html
@@ -148,7 +148,7 @@
     </section>
 
 
-    <section class="ftco-section testimony-section">
+    <!-- <section class="ftco-section testimony-section">
       <div class="container">
         <div class="row justify-content-center mb-5">
           <div class="col-md-7 text-center heading-section ftco-animate">
@@ -233,7 +233,8 @@
           </div>
         </div>
       </div>
-    </section>	 
+    </section>	  -->
+
 
     <div class="container">
       <!-- <canvas id="myChart" width="800" height="600"></canvas> -->
