--- a/daw.webapp12/src/main/resources/public/error/404.html
+++ b/daw.webapp12/src/main/resources/public/error/404.html
@@ -45,7 +45,7 @@
           	<div class="text text-center content-center" id = "containerPresentation">
 	            <h1>Error</h1>
               <h2>404  Page not found</h2>
-              <button type="button" class="btn btn-primary" href="index.html" >Go Back</button>
+              <button type="button" class="btn btn-primary" href="/MainPage" >Go Back</button>
             </div>
         </div>
       </div>
