--- a/uptown/property-upload.html
+++ b/uptown/property-upload.html
@@ -27,9 +27,9 @@
                 </select>
                 <h3 class="botonDesp1">Tipo de vivienda:</h3>
                 <select class="botonDesp" name="cars"> 
-                  <option value="piso">Piso</option>
-                  <option value="casa">Casa</option>
-                  <option value="local">Local</option>
+                  <option value="Piso">Piso</option>
+                  <option value="Casa">Casa</option>
+                  <option value="Local">Local</option>
                 </select>
                 <h3 class="botonDesp1">Nº de habitaciones:</h3>
                 <select class="botonDesp" name="cars"> 
