--- a/uptown/login.html
+++ b/uptown/login.html
@@ -28,9 +28,9 @@
       
           <!-- Sign Up -->
           <div id="formFooter">
-            <a class="underlineHover" href="signUp.html">Registrarse</a>
+            <a class="underlineHover" href="/register">Registrarse</a>
           </div>
-          <a href="http://127.0.0.1:5500/uptown/index.html"><input type="button" value="Home"></a>
+          <a href="/MainPage"><input type="button" value="Home"></a>
       
         </div>
       </div>
