--- a/daw.webapp12/src/main/resources/public/error/400.html
+++ b/daw.webapp12/src/main/resources/public/error/400.html
@@ -45,7 +45,7 @@
             <div class="text text-center content-center" id = "containerPresentation">
                 <h1>Error</h1>
                 <h2>400  Bad Request</h2>
-                <button type="button" href="/MainPage" class="btn btn-primary">Go Back</button>
+                <button type="button" href="/index.html" class="btn btn-primary">Go Back</button>
             </div>
         </div>
     </div>
